# faster_knn

./: Cargo.toml  LICENSE  Readme.md  example.json  postprocess.awk
benches/: knn_comparison.rs
data/: .gitignore  extract.py  get_data.sh  parse_poly.py  shell.nix
src/: lib.rs
src/distance_approximation/: approximation.rs  mod.rs  quadratic.rs
